# purerpc

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  README.md  RELEASE.md  commitlint.config.js  requirements.txt  requirements_test.txt  requirements_test_py36.txt  requirements_test_pypy.txt  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml
ci/: Dockerfile.template  bootstrap_dockerignore.py  build_wheel.sh  docker_build_template.sh  run_tests_in_docker.sh  upload_wheel.sh
docs/: immediate_mode.md
misc/: test_bytearray.py
misc/greeter/: README  baseline_main.py  client.py  client_grpcio.py  failing_client.py  (+15 more)
src/purerpc/grpclib/: CMakeLists.txt  _h2_monkeypatch.py  bindings.cc  buffers.py  config.py  connection.py  events.py  exceptions.py  headers.py  message_buffer.py  status.py
src/purerpc/grpclib/common/: format.h
src/purerpc/grpclib/grpc/: config.cc  config.h  connection.cc  connection.h  event.cc  event.h
src/purerpc/grpclib/http2/: connection.hpp  connection_impl.hpp  errors.cc  errors.h  events.cc  events.h  headers.cc  headers.h  utility.cc  utility.h
tests/: conftest.py  exceptiongroups.py  greeter_pb2.py  greeter_pb2_grpc.py  test_buffers.py  test_case_base.py  test_client_server_codegen.py  test_client_server_errors.py  test_client_server_metadata.py  test_client_server_simple.py  test_echo.py  test_errors.py  test_greeter.py  test_metadata.py  test_protoc_plugin.py  test_server.py  test_server_http2.py  test_simple.py  test_status_codes.py  test_test_utils.py
(+27 files in other folders)
